Fixed some spacing

--- a/Project Code/react-website-design/src/Components/Topbar/Topbar.css
+++ b/Project Code/react-website-design/src/Components/Topbar/Topbar.css
@@ -56,7 +56,7 @@
 }
 
 .TopbarLinks{
-    margin-right: 10px;
+    margin-right: 30px;
     font-style: 14px;
     cursor: pointer;
 }
